objects/CMPL123CME__CVR__c.object
<CustomObject>
    <fields>
        <fullName>BMX_AER_Classification__c</fullName>
        <label>AER Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Serious Injury/Deterioration</fullName>
                </value>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Approve_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approve Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Approve_Done_On__c</fullName>
        <label>Approve Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_On__c</fullName>
        <label>Cancel Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close - Not Locally Reporting Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVR2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_On__c</fullName>
        <label>Close - Not Locally Reporting Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVR3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_On__c</fullName>
        <label>Close Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Competent_Authority_Number__c</fullName>
        <defaultValue>'N/A'</defaultValue>
        <label>Competent Authority Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Date_of_Submission__c</fullName>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Days_in_Pending_Response__c</fullName>
        <formula>MFLOOR(NOW()- BMX_Pending_Response_From__c)</formula>
        <label>Days in Pending Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMX_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment_Decision__c</fullName>
        <description>US-AER-047</description>
        <formula>If(BMX_Local_Assessment__r.RecordType.DeveloperName = 'Local_Assessment', TEXT(BMX_Local_Assessment__r.BMX_Is_Reportable__c) , '' )</formula>
        <label>Local Assessment Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Questionnaire__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Local Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>CVR</relationshipLabel>
        <relationshipName>CVR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Pending_Response_From__c</fullName>
        <formula>IF( CMPL123_WF_Status__c ='Pending Response',CMPL123_WF_Action_Performed_On__c, null)</formula>
        <label>Pending Response From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Reportable_Countrry__c</fullName>
        <defaultValue>'Canada'</defaultValue>
        <label>Reportable Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rework Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVR4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_On__c</fullName>
        <label>Rework Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVR6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_On__c</fullName>
        <label>Submit Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit for Review Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVR5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_On__c</fullName>
        <label>Submit for Review Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Time_to_Notify_the_CA__c</fullName>
        <formula>IF( ISBLANK( Global_Assessment__r.BMX_Revised_Awareness_Date__c ), TEXT((BMX_Date_of_Submission__c ) -  CMPL123CME__Related_Complaint__r.BMX_Customer_Contact_Date__c) ,
TEXT((BMX_Date_of_Submission__c ) - Global_Assessment__r.BMX_Revised_Awareness_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Notify the CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Address__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_of_Device__c</fullName>
        <description>Age of Device</description>
        <inlineHelpText>Age of Device</inlineHelpText>
        <label>Age of Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Availability_of_device_for_evaluation__c</fullName>
        <description>Availability of device for evaluation</description>
        <inlineHelpText>Availability of device for evaluation</inlineHelpText>
        <label>Availability of device for evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Destroyed</fullName>
                </value>
                <value>
                    <fullName>Returned to Manufacturer/Importer</fullName>
                </value>
                <value>
                    <fullName>Neither(with explanation)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Complainant_is_a__c</fullName>
        <description>Complainant is a</description>
        <inlineHelpText>Complainant is a</inlineHelpText>
        <label>Complainant is a</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Control_Lot_Serial_No__c</fullName>
        <description>Control/Lot/Serial No.</description>
        <inlineHelpText>Control/Lot/Serial No.</inlineHelpText>
        <label>Control/Lot/Serial No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Corrective_Actions_taken__c</fullName>
        <description>Corrective Actions taken as a result of the investigation</description>
        <inlineHelpText>Corrective Actions taken as a result of the investigation</inlineHelpText>
        <label>Corrective Actions taken after investig.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Submitted__c</fullName>
        <description>Date Submitted</description>
        <inlineHelpText>Date Submitted</inlineHelpText>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Incident__c</fullName>
        <description>Date of Incident</description>
        <inlineHelpText>Date of Incident</inlineHelpText>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Details_of_Incident__c</fullName>
        <description>Details of Incident</description>
        <inlineHelpText>Details of Incident</inlineHelpText>
        <label>Details of Incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Classification__c</fullName>
        <description>Device Classification</description>
        <inlineHelpText>Device Classification</inlineHelpText>
        <label>Device Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Identification_No__c</fullName>
        <description>Device Identification No</description>
        <inlineHelpText>Device Identification No</inlineHelpText>
        <label>Device Identification No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_License_No__c</fullName>
        <description>Device License No.</description>
        <inlineHelpText>Device License No.</inlineHelpText>
        <label>Device License No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Did_Importer_Reportred_Incid_to_Manufact__c</fullName>
        <description>Did the importer report the incident to the manufacturer?</description>
        <inlineHelpText>Did the importer report the incident to the manufacturer?</inlineHelpText>
        <label>Did Importer Report Incid to Manufact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <inlineHelpText>Expiration Date</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explanation_if_Neither__c</fullName>
        <description>If Availability of device for evaluation is Neither, Please give appropriate explanation</description>
        <inlineHelpText>If Availability of device for evaluation is Neither, Please give appropriate explanation</inlineHelpText>
        <label>Explanation if above is neither</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Health_Canada_File_No__c</fullName>
        <description>Health Canada File No. (if applicable)</description>
        <inlineHelpText>Health Canada File No. (if applicable)</inlineHelpText>
        <label>Health Canada File No. (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__How_Many_Days_Report__c</fullName>
        <description>How Many Days Report</description>
        <inlineHelpText>If the report is a 10 day or 30 day report, based on the seriousness of the incident associated with the medical device</inlineHelpText>
        <label>How Many Days Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10-Day</fullName>
                </value>
                <value>
                    <fullName>30-Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__How_long_was_the_device_in_use__c</fullName>
        <description>How long was the device in use</description>
        <inlineHelpText>How long was the device in use</inlineHelpText>
        <label>How long was the device in use?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Preliminary_final_report_date__c</fullName>
        <description>If “preliminary” only, anticipated date for the final report</description>
        <inlineHelpText>If “preliminary” only, anticipated date for the final report</inlineHelpText>
        <label>If Preliminary, Expected Final Rpt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Update_Final_Previous_Date__c</fullName>
        <description>If “update/final”, date the previous report was submitted to Health Canada:</description>
        <inlineHelpText>If “update/final”, date the previous report was submitted to Health Canada</inlineHelpText>
        <label>If 'Update/final', Previous Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_neither_give_explanation__c</fullName>
        <description>If Availability of device for evaluation is neither give explanation</description>
        <inlineHelpText>If Availability of device for evaluation is neither give explanation</inlineHelpText>
        <label>If neither give explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Importer_Establishment_Licence_Number__c</fullName>
        <description>Importer Establishment Licence Number</description>
        <inlineHelpText>Importer : Establishment License Number
(if applicable)</inlineHelpText>
        <label>Importer Establishment Licence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Importer_Health_Canada_ID_No__c</fullName>
        <description>Health Canada assigned
company identification number
(if known)</description>
        <inlineHelpText>Importer : Health Canada assigned
company identification number
(if known)</inlineHelpText>
        <label>Importer Health Canada ID No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Importer_Name_and_Address__c</fullName>
        <description>Importer Name and Address</description>
        <inlineHelpText>Importer Name and Address</inlineHelpText>
        <label>Importer Name and Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Incident_Occurred_During__c</fullName>
        <description>Incident Occurred During</description>
        <inlineHelpText>Incident Occurred During</inlineHelpText>
        <label>Incident Occurred During</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigational testing</fullName>
                </value>
                <value>
                    <fullName>Special Access Program</fullName>
                </value>
                <value>
                    <fullName>Radiation emitting device (if applicable)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigative_Actions_and_Timeline__c</fullName>
        <description>Investigative Actions and Timeline</description>
        <inlineHelpText>Investigative Actions and Timeline</inlineHelpText>
        <label>Investigative Actions and Timeline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Is_Importer_Submitting_Report__c</fullName>
        <description>Is the importer also submitting the report on behalf of the manufacturer ?</description>
        <inlineHelpText>Is the importer also submitting the report on behalf of the manufacturer ?</inlineHelpText>
        <label>Is Importer Submitting Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Establishment_License__c</fullName>
        <description>Manufacturer Establishment License Number(if applicable)</description>
        <inlineHelpText>Manufacturer Establishment License Number(if applicable)</inlineHelpText>
        <label>Manufacturer Establishment License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Health_Canada_Id_No__c</fullName>
        <description>. Health Canada assigned
company identification number
(if known)</description>
        <inlineHelpText>Health Canada assigned
company identification number
(if known)</inlineHelpText>
        <label>Manufacturer Health Canada Id No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Medical_Device_Identifier__c</fullName>
        <description>Manufacturer’s Medical Device Identifier</description>
        <inlineHelpText>Manufacturer’s Medical Device Identifier</inlineHelpText>
        <label>Manufacturer’s Medical Device Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Name_and_Address__c</fullName>
        <description>Manufacturer Name and Address</description>
        <inlineHelpText>Manufacturer Name and Address</inlineHelpText>
        <label>Manufacturer Name and Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name_of_Complainant__c</fullName>
        <description>Name of Complainant</description>
        <inlineHelpText>Name of Complainant</inlineHelpText>
        <label>Name of Complainant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name_of_Health_Care_Facility__c</fullName>
        <description>Name of Health Care Facility (if applicable)</description>
        <inlineHelpText>Name of Health Care Facility (if applic)</inlineHelpText>
        <label>Name of Health Care Facility (if applic)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Consequences__c</fullName>
        <description>Patient Consequences</description>
        <inlineHelpText>Patient Consequences</inlineHelpText>
        <label>Patient Consequences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Related_Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Complaint</description>
        <inlineHelpText>Complaint</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>CVR</relationshipLabel>
        <relationshipName>CVR_Complaint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reporter_Awareness_Date__c</fullName>
        <description>Reporter’s Awareness Date</description>
        <inlineHelpText>Reporter’s Awareness Date</inlineHelpText>
        <label>Reporter’s Awareness Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reporter_Contact_Information__c</fullName>
        <description>Reporter Contact Information</description>
        <inlineHelpText>Reporter Contact Information</inlineHelpText>
        <label>Reporter Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reporter_File_No__c</fullName>
        <description>Reporter File No.</description>
        <inlineHelpText>Reporter File No.</inlineHelpText>
        <label>Reporter File No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reporter_Type__c</fullName>
        <description>Reporter Type</description>
        <inlineHelpText>Reporter Type</inlineHelpText>
        <label>Reporter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Root_Cause_of_Problem__c</fullName>
        <description>Root Cause of Problem</description>
        <inlineHelpText>Root Cause of Problem</inlineHelpText>
        <label>Root Cause of Problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Software_Version__c</fullName>
        <description>Software Version</description>
        <inlineHelpText>Software Version</inlineHelpText>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Telephone_No_Email_Address__c</fullName>
        <description>Telephone No./Email Address</description>
        <inlineHelpText>Telephone No./Email Address</inlineHelpText>
        <label>Telephone No./Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Trade_Brand_Name__c</fullName>
        <description>Trade/Brand Name</description>
        <inlineHelpText>Trade/Brand Name</inlineHelpText>
        <label>Trade/Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_of_Report__c</fullName>
        <description>Type of Report</description>
        <inlineHelpText>Type of Report</inlineHelpText>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Preliminary and Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Was_the_device_labelled_as_sterile__c</fullName>
        <description>Was the device labelled as sterile</description>
        <inlineHelpText>Was the device labelled as sterile</inlineHelpText>
        <label>Was the device labelled as sterile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Where_did_the_Incident_Occured__c</fullName>
        <description>whether the incident occurred inside or outside Canada</description>
        <inlineHelpText>Whether the incident occurred inside or outside Canada</inlineHelpText>
        <label>Where did the Incident Occured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canadian</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123CMECVRcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Questionnaire__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Global Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>CVR (Global Assessment)</relationshipLabel>
        <relationshipName>CVR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CVR</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type_of_Report__c</columns>
        <columns>CMPL123_WF_Action__c</columns>
        <columns>CMPL123_WF_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CVR-{0000}</displayFormat>
        <label>CVR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVR</pluralLabel>
    <recordTypes>
        <fullName>BMX_Lock_CVR</fullName>
        <active>true</active>
        <label>Lock  CVR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Creation_or_Edit_of_CVR</fullName>
        <active>false</active>
        <description>Cannot create a new CVR from the Complaint record at any time when the Complaint record is Locked.</description>
        <errorConditionFormula>OR( 
AND(ISNEW(),  CMPL123CME__Related_Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed'), 
CMPL123CME__Related_Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed')</errorConditionFormula>
        <errorMessage>Cannot create/edit a CVR for closed Complaint</errorMessage>
    </validationRules>
</CustomObject>